Fix colori contrasto link

--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@
 	--breadcrumb-bg-color: #1b1b1b;
 
 	--red: #F47676;
+	--link-bg-hover: #810E0E;
 	--verde: #025F26;
 	--verde-h: #006d2a;
 	--blu: #0057A3;
@@ -67,7 +68,7 @@
 		--text-color: black;
 		--alternative-text-color: white;
 		--error-color: #C2B800;
-		--links-hover-color: #1644fd;
+		--links-hover-color: #0A2CB2;
 		--links-visited-color: #340B93;
 		--scrollbar: #585858;
 		--scrollbar-background: #282828;
@@ -91,11 +92,12 @@
 
 		--error-color: #fbff00;
 		--breadcrumb-text-color: #561010;
-		--breadcrumb-text-h-color: #1644fd;
+		--breadcrumb-text-h-color: #0A2CB2;
 		--breadcrumb-links-visited-color: #340B93;
 		--breadcrumb-bg-color: #B8B8B8;
 
 		--red: #A42323;
+		--link-bg-hover: #FCCACA;
 		--verde: #00b846;
 		--verde-h: #07c750;
 		--blu: #3F9FF3;
@@ -429,7 +431,7 @@ nav ul {
 }
 
 .menu_link {
-	background-color: var(--red);
+	background-color: var(--secondary-color);
 	padding: 1.0em;
 	margin-bottom: 0.5em;
 	color: var(--text-color);
@@ -438,6 +440,13 @@ nav ul {
 	font-weight: bold;
 	text-decoration: none;
 	box-shadow: 5px 5px 5px var(--box-shadow-1);
+}
+
+.menu_link u,
+.menu_link span,
+#home_info .menu_link abbr {
+	background-color: var(--secondary-color);
+	color: var(--text-color);
 }
 
 .menu_link:hover,
@@ -449,7 +458,7 @@ nav ul {
 .menu_link:visited:hover span,
 #home_info .menu_link:visited:hover abbr {
 	color: var(--links-hover-color);
-	background-color: var(--secondary-color);
+	background-color: var(--link-bg-hover);
 }
 
 .menu_link:hover,
@@ -1266,14 +1275,15 @@ iframe#map {
 }
 
 .loginpage .adminlink:hover,
+.loginpage .adminlink:hover u, 
 .loginpage .adminlink:visited:hover,
 .loginpage .adminlink:visited:hover u {
-	background-color: var(--header-color);
+	background-color: var(--link-bg-hover);
 	color:var(--links-hover-color);
 }
 
 .loginpage .adminlink:visited,
-.adminlink u {
+.adminlink:visited u {
 	color: var(--links-visited-color);
 }
 
@@ -1476,7 +1486,7 @@ iframe#map {
 }
 
 #link_insert_corso:hover {
-	background-color: var(--header-color);
+	background-color: var(--link-bg-hover);
 }
 
 #link_insert_corso:hover,
